finished 3 operations, update remaining

--- a/ngSleepTracker/src/app/app.component.html
+++ b/ngSleepTracker/src/app/app.component.html
@@ -1,6 +1,6 @@
-<h1>FIX ME</h1>
+<!-- <h1>FIX ME</h1> -->
 
 <main class="container-fluid">
-  <h3>Put stuff here.</h3>
+  <!-- <h3>Put stuff here.</h3> -->
   <router-outlet></router-outlet>
 </main>
