--- a/ngSleepTracker/src/app/components/home/home.component.html
+++ b/ngSleepTracker/src/app/components/home/home.component.html
@@ -38,6 +38,7 @@
     </tr>
   </tbody>
 </table>
+<h2>You have averaged a wakefulness rating of {{restRating()}}.</h2>
 </div>
 <form *ngIf='editSleep' ngForm>
   <h3>Update</h3>
